[project]
name = "email-mcp-server"
version = "1.0.0"
description = "Email MCP Server — AgentMail wrapper for AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
email-mcp-server = "email_mcp_server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
